# wusd-stablecoin

./: .env  .gitignore  Anchor.toml  README.md  deploy-keypair.json  package.json  program-keypair.json  tsconfig.json
migrations/: deploy.ts
programs/wusd-application/: Cargo.toml
programs/wusd-application/src/: base.rs  error.rs  lib.rs  state.rs
programs/wusd-application/src/instructions/: mod.rs  softstake.rs  stake.rs  swap.rs  withdraw.rs
programs/wusd-stablecoin/: Cargo.toml
programs/wusd-stablecoin/src/: error.rs  lib.rs  state.rs
programs/wusd-stablecoin/src/instructions/: mod.rs  softstake.rs  stake.rs  swap.rs  withdraw.rs
programs/wusd-token/: Cargo.toml
programs/wusd-token/src/: error.rs  lib.rs  state.rs  utils.rs
programs/wusd-token/src/instructions/: burn.rs  freeze.rs  mint.rs  operator.rs  pause.rs  permit.rs  transfer.rs
tests/: config.ts  wusd-application-config.ts  wusd-application.ts  wusd-stablecoin.ts  wusd-token-config.ts  wusd-token.ts
tests/util/: new-account-with-lamports.ts
tests/wusd-application/: config.ts  index.ts  test.ts
tests/wusd-token/: mint.ts  test.ts  transfer.ts
types/: wusd_application.ts  wusd_stablecoin.ts  wusd_token.ts
