[package]
name = "wusd-application"
version = "0.1.0"
description = "WUSD Stablecoin Application"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
init-if-needed = ["anchor-lang/init-if-needed"]

[dependencies]
anchor-lang = { version = "0.28.0", features = ["init-if-needed"] }
anchor-spl = "0.28.0"
solana-program = "1.16.25"
getrandom = { version = "0.1.16", features = ["dummy"] }

[dependencies.ed25519-dalek]
version = "1.0.1"
default-features = false
features = ["u64_backend"]