[package]
name = "wusd-stablecoin"
version = "1.0.0"
description = "Created with WSPN"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "wusd_stablecoin"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["derive","init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["token"] }
