[package]
name = "wusd-token"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "wusd_token"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
devnet = []
serde = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["derive", "init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["token"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
 
