[package]
name = "wusd-token"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "wusd_token"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
init-if-needed = ["anchor-lang/init-if-needed"]

[dependencies]
anchor-lang = { version = "0.28.0", features = ["init-if-needed"] }
anchor-spl = "0.28.0"
solana-program = "1.16.0"
ed25519-dalek = "1.0.1"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
getrandom = { version = "0.1.16", features = ["dummy"] }
 
